--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.17.1",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -28,6 +29,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "moment": "^2.21.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -35,10 +37,17 @@
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-date-range": "^0.9.4",
+    "react-dates": "^16.3.6",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-favicon": "0.0.13",
+    "react-icons": "^2.2.7",
+    "react-modal": "^3.1.13",
+    "react-player": "^1.2.1",
+    "react-ripples": "^1.1.2",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
