--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -62,6 +61,7 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.8.1"
