--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
     "eslint": "4.10.0",
@@ -47,7 +46,6 @@
     "react-ripples": "^1.1.2",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack-dev-server": "2.9.4",
@@ -61,10 +59,12 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.0.0",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "webpack": "^3.8.1"
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.11.0"
   },
   "jest": {
     "collectCoverageFrom": [
